antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__skill_popup_closes_between_spaces_before_plain_text.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
" ┃ $old  word                                                                                       "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
"                                                                                                    "
"                                                                                 100% context left  "
